[FIX] Word-break in input fields bug in chrome

--- a/app/assets/stylesheets/briarcliff/_forms.scss
+++ b/app/assets/stylesheets/briarcliff/_forms.scss
@@ -12,6 +12,7 @@ input[type="text"], textarea, input[type="password"], input[type="email"], input
   line-height: 1.4em;
   border: solid 1px $g1;
   -webkit-appearance: none;
+  word-break: normal; //Fixes a bug in chrome where the content in an input glitches between two lines.
   @include border-radius(0);
   @include transition(.2s);
   @include placeholder{
